cargo-aprz-lib/src/commands/snapshots/cargo_aprz_lib__commands__validate__tests__unknown_field.snap
---
source: cargo-aprz-lib/src/commands/validate.rs
expression: snapshot_content
---
TOML parse error at line 5, column 1
  |
5 | unknown_field = "value"
  | ^^^^^^^^^^^^^
unknown field `unknown_field`, expected one of `deny_if_any`, `accept_if_any`, `accept_if_all`, `crates_cache_ttl`, `hosting_cache_ttl`, `codebase_cache_ttl`, `coverage_cache_ttl`, `advisories_cache_ttl`
